--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,26 @@
 {
-    "name": "istvan86/composer-focus-module-installer",
-
+    "name": "focus-cms/composer-focus-module-installer",
     "type": "composer-plugin",
-
+    "description": "Composer installer plugin for Focus CMS modules.",
+    "keywords": ["focus-cms", "composer", "installer", "module"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "István Hatala"
+        }
+    ],
     "require": {
+        "php": "^8.1",
         "composer-plugin-api": "^2.0"
     },
-
     "autoload": {
         "psr-4": {
-            "Istvan\\ComposerFocusModuleInstaller\\": "src/"
+            "FocusCMS\\ComposerModuleInstaller\\": "src/"
         }
     },
-
     "extra": {
-        "class": "Istvan\\ComposerFocusModuleInstaller\\ModulePlugin"
-    }
+        "class": "FocusCMS\\ComposerModuleInstaller\\ModulePlugin"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
