--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,39 @@
 {
     "name": "focus-cms/composer-focus-module-installer",
-    "type": "composer-plugin",
     "description": "Composer installer plugin for Focus CMS modules.",
-    "keywords": ["focus-cms", "composer", "installer", "module"],
+    "type": "composer-plugin",
+
+    "version": "1.0.0",
+
     "license": "MIT",
+
     "authors": [
         {
             "name": "István Hatala"
         }
     ],
+
     "require": {
         "php": "^8.1",
         "composer-plugin-api": "^2.0"
     },
+
     "autoload": {
         "psr-4": {
             "FocusCMS\\ComposerModuleInstaller\\": "src/"
         }
     },
+
     "extra": {
         "class": "FocusCMS\\ComposerModuleInstaller\\ModulePlugin"
     },
+
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+
+    "config": {
+        "allow-plugins": {
+            "focus-cms/composer-focus-module-installer": true
+        }
+    }
 }
